# miga-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TECHNICAL.md
.cargo/: config.toml
.github/: FUNDING.yml  copilot-instructions.md
docs/portuguese/: README.md  TECHNICAL.md
docs/spanish/: README.md  TECHNICAL.md
src/: cli.rs  compiler.rs  main.rs
src/commands/: add.rs  build.rs  fetch.rs  init.rs  mod.rs  remove.rs  run.rs
src/commands/init/: mod.rs  prompts.rs  templates.rs
src/compiler/: mod.rs
src/registry/: manifest.rs  mod.rs
src/utils/: builder.rs  env.rs  fs.rs  json.rs  mod.rs  net.rs  npm.rs  output.rs  project.rs  tsconfig.rs
